clusters/app.ci/assets/bugzilla-backporter.yaml
kind: List
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    namespace: ci
    labels:
      app: prow
      component: bugzilla-backporter
    name: bugzilla-backporter
  spec:
    ports:
    - name: main
      port: 80
      protocol: TCP
      targetPort: main
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: metrics
    selector:
      app: prow
      component: bugzilla-backporter
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: prow
      component: bugzilla-backporter
    name: bugzilla-backporter
    namespace: ci
  spec:
    host: bugzilla-backporter.apps.ci.l2s4.p1.openshiftapps.com
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    port:
      targetPort: main
    to:
      kind: Service
      name: bugzilla-backporter
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    namespace: ci
    name: bugzilla-backporter
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"bugzilla-backporter:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"bugzilla-backporter\")].image"}]'
  spec:
    replicas: 2
    strategy:
      type: RollingUpdate
    selector:
      matchLabels:
        app: prow
        component: bugzilla-backporter
    template:
      metadata:
        labels:
          app: prow
          component: bugzilla-backporter
      spec:
        containers:
        - name: bugzilla-backporter
          image: bugzilla-backporter:latest
          args:
          - -bugzilla-endpoint=https://bugzilla.redhat.com/
          - -bugzilla-api-key-path=/etc/bugzilla/api
          - -log-level=debug
          - -plugin-config=/etc/plugins/plugins.yaml
          ports:
          - name: main
            containerPort: 8080
          - name: metrics
            containerPort: 9090
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 600
          volumeMounts:
          - name: bugzilla
            mountPath: /etc/bugzilla
            readOnly: true
          - name: plugins
            mountPath: /etc/plugins
            readOnly: true
          resources:
            requests:
              memory: "2Gi"
              cpu: "200m"
        volumes:
        - name: bugzilla
          secret:
            secretName: bugzilla-credentials-openshift-bugzilla-robot
        - name: plugins
          configMap:
            name: plugins
